# docs/swagger.json
@@ -7,6 +7,40 @@
     },
     "host": "localhost:8088",
     "paths": {
+        "/admin/user/register": {
+            "post": {
+                "description": "用户添加",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "后台管理-用户"
+                ],
+                "summary": "用户添加",
+                "parameters": [
+                    {
+                        "description": "用户添加参数",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.RegisterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.RegisterResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/tool/ping": {
             "get": {
                 "consumes": [
@@ -342,10 +376,6 @@
                     "description": "用户头像",
                     "type": "string"
                 },
-                "gender": {
-                    "description": "性别 1 - 男性 2 - 女性",
-                    "type": "integer"
-                },
                 "nickName": {
                     "description": "用户昵称",
                     "type": "string"
@@ -360,6 +390,35 @@
                 }
             }
         },
+        "user.RegisterRequest": {
+            "type": "object",
+            "required": [
+                "nick_name",
+                "password",
+                "phone"
+            ],
+            "properties": {
+                "avatar": {
+                    "description": "头像",
+                    "type": "string"
+                },
+                "nick_name": {
+                    "description": "昵称",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "手机号",
+                    "type": "string"
+                }
+            }
+        },
+        "user.RegisterResponse": {
+            "type": "object"
+        },
         "user.SmsLoginRequest": {
             "type": "object",
             "required": [
@@ -367,10 +426,6 @@
                 "phone"
             ],
             "properties": {
-                "channelCode": {
-                    "description": "渠道标识",
-                    "type": "string"
-                },
                 "code": {
                     "description": "验证码",
                     "type": "string"
